tests/error/invalid_array_shift.gw
#! [contains] array depths do not match
int i[2][2];
i << 2;
